Password Manager 20.2.1
* JavaFX 14.0.1
* Drop binary support for Windows